[project]
name = "onecompiler"
version = "0.4.0"
description = "Api online compilators. Create your VM access!"
authors = [
    {name = "Aleksey Baev",email = "skinxedovich@vk.com"}
]
maintainers = [
  {name = "Aleksey Baev", email = "skinxedovich@vk.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
keywords = ["OneCompiler", "API", "SDK"]
dependencies = [
    "beautifulsoup4>=4.13.3",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
]

[project.urls]
Homepage = "https://github.com/pokedim13/OneCompiler"
Documentation = "https://github.com/pokedim13/OneCompiler"
Repository = "https://github.com/pokedim13/OneCompiler.git"
Issues = "https://github.com/pokedim13/OneCompiler/issues"

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]
test = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[[tool.uv.index]]
name = "gitverse"
url = "https://gitverse.ru/sweetdogs?tab=packages"
publish-url = "https://gitverse.ru/api/packages/sweetdogs/pypi"



[tool.ruff]
line-length = 140

[tool.ruff.lint]
unfixable = ["B"]
select = ["T20","B","F","E","I","UP","N","ANN","Q","COM","ERA","ASYNC","BLE","FIX","ISC","PIE","PTH"] # ["F","B","E","I","UP","N","ANN","Q"]
ignore = ["ANN002", "ANN003", "ANN204"]
